--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fast-levenshtein": "^3.0.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.20.0",
     "uuid": "^9.0.1",
